# aeris_robot

./: .atom-build.json  CMakeLists.txt  README.md  main.c  main.c.in  options.h  stm32f_write_dfu_usb.sh
device/: CMakeLists.txt
device/stm32f4/lib_low_level/: startup.c
device/stm32f4/lib_low_level/i2c/: i2c.c
device/stm32f4/lib_low_level/pwm/: pwm.c
device/stm32f4/lib_low_level/timer/: timer.h
lib_usr/: CMakeLists.txt  apds9950.c  apds9950.h  lsm9ds0.c  lsm9ds0.h  math.c  math.h  pca9548.c  pca9548.h
lib_usr/aeris_robot/: aeris_error.h  aeris_robot.c  aeris_robot.h  aeris_tests.c  aeris_tests.h  aeris_util.c  aeris_util.h  line_sensor.c  line_sensor.h
os/: CMakeLists.txt
usr/: CMakeLists.txt  line_follower.c  line_follower.h  template.c  template.h  tests.c  tests.h
